<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">勇者闯迷宫</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="attr_name">属性</string>
    <string name="atk_name">攻击</string>
    <string name="def_name">防御</string>
    <string name="upload_label">上传角色</string>
    <string name="reset_skill_label">重置技能</string>
    <string name="buy_label">赞（踩）\n10W锻造点数/1￥</string>
    <string name="pause_label">暂停</string>
    <string name="achievement_label">成就</string>
    <string name="restore_desc">恢复技能和体力值相关</string>
    <string name="hit_desc">重击技能和力量值相关</string>
    <string name="mul_desc">群攻技能和敏捷值相关</string>
    <string name="hp_label">HP</string>
    <string name="material_label">锻造点数</string>
    <string name="point_label">能力点数</string>
    <string name="strength_label">+1力</string>
    <string name="life_label">+1体</string>
    <string name="agile_label">+1敏</string>
    <string name="sword_label">武器</string>
    <string name="armor_label">护具</string>
    <string name="level_up">+1</string>
    <string name="version">version-1.8.2</string>
    <string name="start_label">开 始 游 戏</string>
    <string name="hero_name">勇者</string>
    <string name="book_label">怪物</string>
    <string name="skill_label">技能</string><string name="pet_tip">宠物加点使用的是你的能力点数</string>
    <string name="game_menu_tip">抵制不良游戏，拒绝盗版游戏。\n注意自我保护，谨防上当受骗。\n适度游戏益脑，沉迷游戏伤身。\n合理安排时间，享受健康生活。</string>

</resources>