<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainGameActivity">

        <ScrollView
            android:id="@+id/main_info_sv"
            android:layout_width="200dp"

            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/main_info_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ff11f8ff"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/main_info_sv">

            <LinearLayout
                android:id="@+id/root_item_character"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/character_itembar"
                    android:layout_width="fill_parent"
                    android:layout_height="70sp"
                    android:background="#58c4ff"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/character_itembar_contribute"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="#7a31ff"
                        android:clickable="true"
                        android:gravity="center"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/character_item_contribute"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/hero_pic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:textSize="6sp" />

                            <TextView
                                android:id="@+id/hero_pic_click_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical" android:layout_gravity="right">

                            <Button
                                android:id="@+id/first_skill"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:alpha="80"
                                android:gravity="center"
                                android:textSize="6sp" />

                            <Button
                                android:id="@+id/secondary_skill"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:alpha="70"
                                android:gravity="center"
                                android:textSize="6sp" />

                            <Button
                                android:id="@+id/third_skill"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:alpha="70"
                                android:gravity="center"
                                android:textSize="6sp" />

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/local_box"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:drawableLeft="@drawable/st"
                                    android:gravity="center"
                                    android:textSize="6sp" />

                                <TextView
                                    android:id="@+id/key_count"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:drawableLeft="@drawable/ys"
                                    android:gravity="center"
                                    android:textSize="6sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <TextView android:id="@+id/hat_view"
                                  android:layout_height="wrap_content"
                                  android:layout_width="wrap_content"
                                  android:layout_weight="1" android:textSize="12sp"/>
                        <TextView android:id="@+id/necklace_view"
                                  android:layout_height="wrap_content"
                                  android:layout_width="wrap_content"
                                  android:layout_weight="1" android:textSize="12sp"/>
                        <TextView android:id="@+id/ring_view"
                                  android:layout_height="wrap_content"
                                  android:layout_width="wrap_content"
                                  android:layout_weight="1" android:textSize="12sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:gravity="center_vertical"
                            android:text="@string/hp_label"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/main_contri_hp"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="12sp" android:text="123456" android:gravity="center"
                            android:textAlignment="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:gravity="center_vertical"
                            android:text="@string/atk_name"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/main_contri_att"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="12sp" android:text="123456" android:textAlignment="center"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:gravity="center_vertical"
                            android:text="@string/def_name"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/main_contri_def"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="12sp" android:gravity="center" android:text="1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:text="@string/sword_label"
                            android:textSize="12sp" android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/main_contri_level"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:singleLine="false"
                            android:textSize="12sp" android:gravity="center" android:text="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:text="@string/armor_label"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/main_armor_level"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textSize="12sp" android:gravity="center" android:text="12"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical"
                            android:text="@string/material_label"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/hero_material"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center|center_vertical"
                            android:textSize="12sp" android:text="1234"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical"
                            android:text="@string/point_label"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/hero_point"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center|center_vertical"
                            android:textSize="12sp" android:text="1234" android:textAlignment="center"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/palace_pause_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:layout_weight="1"
                        android:text="@string/pause_label"
                        android:textSize="12sp" />
                    <Button
                        android:id="@+id/exist_palace_button"
                        android:text="中止挑战"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</RelativeLayout>
